2015-09-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_ctrl.c (usb_cb_device_reset): Stop the interface.

	* src/usb_stm32f103.c (std_set_interface): Bug fix for conf.

	* src/gnuk.ld.in (__process3_stack_size__): Increase stack size of
	GPG thread.
	(__main_stack_size__): Decrease stack size of exception handlers.
	(__process1_stack_size__): Decrease stack size of CCID.
	(__process2_stack_size__): Decrease stack size of RNG.

2015-09-14  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (LED_GNUK_EXEC): New.
	* src/main.c, src/usb-icc.c, src/usb_ctrl.c: icc_state_p access
	clean up.

2015-09-11  Niibe Yutaka  <gniibe@fsij.org>

	* tool/upgrade_by_passwd.py (main): Loop until finding reGNUal
	device.

2015-09-10  Niibe Yutaka  <gniibe@fsij.org>

	* src/call-rsa.c (rsa_cleanup): New.
	(rsa_sign, rsa_decrypt, rsa_genkey): Allow cancellation.
	* src/openpgp.c (cmd_pso, cmd_internal_authenticate): Cancellation
	is handled by each functions in case of RSA.

2015-09-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/sys.h: Update from Chopstx.
	* src/adc_stm32f103.c: Update from NeuG.

	* src/openpgp.c (process_command_apdu): Protect command execution
	against cancelling the execution thread.
	(cmd_pso, cmd_internal_authenticate): Allow cancellation.

	* src/main.c (main): Handle LED_USB_RESET.

	* src/usb-icc.c (ccid_usb_reset): New.
	(ccid_thread): Upon receival of EV_USB_RESET, finish
	the thread, canceling the card thread.

2015-09-08  Niibe Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (EV_USB_RESET, LED_USB_RESET): New.

	* src/usb_ctrl.c (CDC_CTRL_DTR): New.
	(vcom_port_data_setup): Distinguish detail->value for DTR.

	* src/configure (help): Add ST_DONGLE and ST_NUCLEO_F103.

2015-09-04  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (do_openpgpcard_aid): Use upper bytes of unique
	ID of MCU; same as USB serial number.

	* src/configure (help): Add NITROKEY_START.a

2015-08-26  Mateusz Zalega  <mateusz@nitrokey.com>

	* GNUK_USB_DEVICE_ID: Add Nitrokey Start.
