@@ -1,5 +1,8 @@
 2015-09-15  Niibe Yutaka  <gniibe@fsij.org>
 
+	* src/usb-icc.c (ccid_thread): Don't finish on reset, but
+	keep running.
+
 	* src/usb_ctrl.c (usb_cb_device_reset): Stop the interface.
 
 	* src/usb_stm32f103.c (std_set_interface): Bug fix for conf.
